[tool.poetry]
name = "saturn-engine"
version = "0.2.0dev15" # Also in setup.py
description = ""
readme = "README.md"
authors = ["Flare Systems <oss@flare.systems>"]
repository = "https://github.com/Flared/saturn"
keywords = ["data", "collection", "task", "worker", "processing"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Distributed Computing",
]
license = "BSD-3-Clause"
packages = [
    { include = "saturn_engine", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {extras = ["mypy"], version = "1.4.27"}
aiosqlite = "^0.17.0"
marshmallow = "^3.13.0"
desert = "^2020.11.18"
asyncstdlib = "^3.10.2"
aio-pika = "^6.8.0"
####################
## worker-manager ##
####################
Flask = {version = "^2.0.2", optional = true }
PyYAML = "^6.0"
types-PyYAML = "^6.0.0"
aiohttp = {extras = ["speedups"], version = "^3.8.0"}
croniter = "^1.0.15"
types-croniter = "^1.0.3"
marshmallow-enum = "^1.5.1"
ray = {version = "^1.8.0", optional = true}
click = "^8.0.3"

[tool.poetry.extras]
worker-manager = [
  "Flask",
]
ray = ["ray"]

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
flake8-isort = "^4.0.0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
nox-poetry = "^0.8.6"
pytest-asyncio = "^0.15.1"
pytest-icdiff = "^0.5"
freezegun = "^1.1.0"
types-freezegun = "^1.1.2"
pytest-mock = "^3.6.1"
flake8-breakpoint = "^1.1.0"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = [
  "error",
  "ignore:distutils Version classes are deprecated.:DeprecationWarning",
  "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]

[tool.isort]
profile = "black"
force_single_line = true

[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ["src", "mypy_stubs"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = [
  "nox.*",
]
ignore_missing_imports = true
